package com.omni.webapp.controller;

public class RestExceptionHandler {
}
