package com.omni.webapp.models;

public class APIErrorResponse {
}
